--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 24
@@ -17,6 +18,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -27,5 +33,15 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.jude:easyrecyclerview:4.2.5'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+    compile 'com.orhanobut:logger:1.15'
+    compile 'org.slf4j:slf4j-api:1.7.12'
+    compile 'com.android.support:cardview-v7:24.0.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.1'
 
 }
