--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
@@ -41,7 +42,8 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
     compile 'com.orhanobut:logger:1.15'
     compile 'org.slf4j:slf4j-api:1.7.12'
-    compile 'com.android.support:cardview-v7:24.0.0'
+    compile 'com.android.support:cardview-v7:24.2.1'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
-
+    compile 'me.relex:circleindicator:1.2.2@aar'
+    compile 'fm.jiecao:jiecaovideoplayer:4.8.2'
 }
